--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 
 <body>
-    
+
+
     <div class="container">
         <div class="dice">
             <div class="face front"></div>
@@ -21,8 +22,8 @@
             <div class="face left"></div>
         </div> 
 
-        <button class="roll">
-            Roll Dice
+        <button class="roll" id="myButton">
+            Roll the Dice
         </button>
 
     </div>
